--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,7 @@ spring.redis.lettuce.protocol-version=2
 feign.client.config.IStripePaymentClient.connectTimeout=5000
 feign.client.config.IStripePaymentClient.readTimeout=10000
 # Configuraes do Stripe Pagamentos
+# recupar a chave secreta do Stripe em https://dashboard.stripe.com/test/dashboard
 stripe.secret-key=
 # Spring Modulith
 spring.modulith.events.publication.mongo.enabled=true
